# matelot

./: LICENSE  README.md  pyproject.toml
examples/: boxplot.py  data  lineplot.py
matelot/: __init__.py  _boxplot.py  _core.py  _lineplot.py  _svg.py
tests/: test_boxplot.py  test_lineplot.py  test_svg.py
